syntax = "proto3";

package table;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_package = "io.toxa108.pokerito.notificationservice.proto";
option java_multiple_files = true;

service NotificationService {
    rpc enterTable (EnterTableFinishRequest) returns (google.protobuf.Empty);
}

message NewConnectionRequest {
    string userId = 1;
    string ip = 2;
}

message EnterTableFinishRequest {
    string userId = 1;
    string tableId = 2;
    string gameId = 3;
}
